@@ -1,6 +1,12 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.002003
+ [Added / test requires]
+ - Dist::Zilla::Util::Test::KENTNL 1.0001002
+
+ [Removed / test requires]
+ - Test::Fatal
+ - lib
 
 0.002002 2014-08-18T04:36:16Z
 
