@@ -1,6 +1,15 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 0.002003
+ [Added / test requires]
+ - Dist::Zilla::Util::Test::KENTNL 1.0001002
+
+ [Changed / develop suggests]
+ - Dist::Zilla::PluginBundle::Author::KENTNL 2.019000 → 2.020000
+
+ [Removed / test requires]
+ - Test::Fatal
+ - lib
 
 0.002002 2014-08-18T04:36:16Z
  [Changed / develop suggests]
